--- a/Задача регрессии.ipynb
+++ b/Задача регрессии.ipynb
@@ -1268,6 +1268,119 @@
     "plt.title('Поиск аномалий')\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "from sklearn.ensemble import RandomForestRegressor\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.metrics import mean_absolute_error, mean_squared_error, r2_score\n",
+    "from sklearn.preprocessing import StandardScaler, LabelEncoder\n",
+    "\n",
+    "# Шаг 1: Загрузка и предварительный анализ данных\n",
+    "df = pd.read_csv('dataset.csv')\n",
+    "\n",
+    "# Проверка информации о данных\n",
+    "print(\"Информация о данных:\")\n",
+    "print(df.info())\n",
+    "print(\"\\nПропущенные значения:\")\n",
+    "print(df.isnull().sum())\n",
+    "print(\"\\nПервые 5 строк:\")\n",
+    "print(df.head())\n",
+    "\n",
+    "# Удаление строк с пропущенными значениями (если такие есть)\n",
+    "df.dropna(inplace=True)\n",
+    "\n",
+    "# Feature Engineering\n",
+    "# Проверка типов данных\n",
+    "categorical_features = df.select_dtypes(include=['object']).columns.tolist()\n",
+    "numerical_features = df.select_dtypes(include=['int64', 'float64']).columns.tolist()\n",
+    "\n",
+    "# Исключаем 'popularity' из числовых признаков\n",
+    "numerical_features.remove('popularity')\n",
+    "\n",
+    "# Используем Label Encoding для категориальных признаков\n",
+    "label_encoders = {}\n",
+    "for col in categorical_features:\n",
+    "    le = LabelEncoder()\n",
+    "    df[col] = le.fit_transform(df[col])\n",
+    "    label_encoders[col] = le\n",
+    "\n",
+    "# Преобразование бинарных признаков (bool) в int\n",
+    "df['explicit'] = df['explicit'].astype(int)\n",
+    "\n",
+    "# Масштабирование числовых признаков\n",
+    "scaler = StandardScaler()\n",
+    "df[numerical_features] = scaler.fit_transform(df[numerical_features])\n",
+    "\n",
+    "# Проверка итогового DataFrame\n",
+    "print(\"\\nПреобразованные данные:\")\n",
+    "print(df.head())\n",
+    "\n",
+    "# Анализ корреляции признаков с таргетом ('popularity')\n",
+    "correlation = df.corr()\n",
+    "correlation_target = correlation['popularity'].sort_values(ascending=False)\n",
+    "print(\"\\nКорреляция признаков с 'popularity':\")\n",
+    "print(correlation_target)\n",
+    "\n",
+    "# Feature Importances с помощью RandomForestRegressor\n",
+    "# Выделяем признаки и целевую переменную\n",
+    "X = df.drop(columns=['popularity'])\n",
+    "y = df['popularity']\n",
+    "\n",
+    "# Разделение на обучающую и тестовую выборки\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.3, random_state=42)\n",
+    "\n",
+    "# Построение модели RandomForest\n",
+    "model = RandomForestRegressor(random_state=42)\n",
+    "model.fit(X_train, y_train)\n",
+    "\n",
+    "# Оценка важности признаков\n",
+    "importances = model.feature_importances_\n",
+    "feature_names = X.columns\n",
+    "feature_importance_df = pd.DataFrame({'Feature': feature_names, 'Importance': importances})\n",
+    "feature_importance_df = feature_importance_df.sort_values(by='Importance', ascending=False)\n",
+    "\n",
+    "# Вывод топ-10 признаков по важности\n",
+    "print(\"\\nТоп-10 признаков по важности:\")\n",
+    "print(feature_importance_df.head(10))\n",
+    "\n",
+    "# Визуализация важности признаков\n",
+    "plt.figure(figsize=(10, 6))\n",
+    "sns.barplot(x='Importance', y='Feature', data=feature_importance_df.head(10))\n",
+    "plt.title('Feature Importances')\n",
+    "plt.show()\n",
+    "\n",
+    "# Построение и оценка простой модели\n",
+    "# Предсказание на тестовой выборке\n",
+    "y_pred = model.predict(X_test)\n",
+    "\n",
+    "# Оценка качества модели\n",
+    "mae = mean_absolute_error(y_test, y_pred)\n",
+    "mse = mean_squared_error(y_test, y_pred)\n",
+    "r2 = r2_score(y_test, y_pred)\n",
+    "\n",
+    "print(f\"\\nОценка модели:\")\n",
+    "print(f\"MAE (Mean Absolute Error): {mae:.2f}\") # Средняя абсолютная ошибка\n",
+    "print(f\"MSE (Mean Squared Error): {mse:.2f}\") # Средняя квадратная ошибка\n",
+    "print(f\"R^2 (R-squared): {r2:.2f}\") # Коэффициент детерминации, который указывает, насколько хорошо модель объясняет изменчивость целевой переменной.\n",
+    "\n",
+    "# Визуализация фактических и предсказанных значений\n",
+    "plt.figure(figsize=(8, 6))\n",
+    "plt.scatter(y_test, y_pred, alpha=0.5)\n",
+    "plt.xlabel('Actual Popularity')\n",
+    "plt.ylabel('Predicted Popularity')\n",
+    "plt.title('Actual vs Predicted Popularity')\n",
+    "plt.plot([0, 100], [0, 100], '--r')  # Линия идеального предсказания\n",
+    "plt.show()"
+   ]
   }
  ],
  "metadata": {
@@ -1286,7 +1399,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "version": "3.12.6"
   }
  },
  "nbformat": 4,
